@@ -1,6 +1,8 @@
 v1.1.7	(Jun 20, 2006)
 
 	* XML-RPC Interface (using XML-RPC for PHP, from http://phpxmlrpc.sourceforge.net/)
+	* Basic support for themes
+	* New default interface theme
 
 v1.1.6	(May 02, 2006)
 	
